--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,10 @@
     "api/webhook.py": {
       "runtime": "python3.9"
     }
+  },
+  "build": {
+    "env": {
+      "PYTHON_ENABLE_PIP_INSTALL": "1"
+    }
   }
 }
